--- a/index.html
+++ b/index.html
@@ -1,41 +1,33 @@
 ---
 layout: default
-title: RhythmKit
----
+bodyclass: home
 
-<div id="home">
-  <h1>Blog Posts</h1>
-  <ul class="posts">
-    {% for post in site.posts %}
-      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
-    {% endfor %}
-  </ul>
+seoTitle: RhythmKit - A boilerplate for devs that care about setting type.
+seoDescription: Vertical Rhythm, Element queries and awesomizing
+
+featureImg: artwork-013.jpg
+featureStatement: ART WORKS FOR YOU
+
+title:
+subtitle: St. Louis ArtWorks is AWESOME!
+
+unique-cta:
+
+mega-cta-img:
+mega-cta-heading:
+mega-cta-button-text:
+mega-cta-button-text-url:
+
+reveal: programs
+---
+<main>
+
+{% include imgBanner.html %}
+
+<div class="megaStatement">
+    <h2 class="megaStatement__heading">Check out our awesome programs</h2>
 </div>
 
-<article max-width="600px" style="position: relative;">
-  <h1>Ready to play</h1>
-  <div>
-    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu.</p>
-    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu.</p>
-    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu.</p>
-  </div>
+{% include reveal-box.html %}
 
-  <h2>What's the deal today with watching the final Colbert Raport</h2>
-  <h4>What's the deal today with watching the final Colbert Raport</h4>
-
-  <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu.</p>
-
-  <h3>the silence of the films</h3>
-
-  <div class="snap one">
-    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/68939/minions_960.jpg">
-  </div>
-
-  <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu.</p>
-
-  <div class="snap two">
-    <img src="http://www.craftsmanspace.com/sites/default/files/styles/thumbnail/public/free-patterns/square_ornament_9.gif">
-  </div>
-
-  <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu.</p>
-</article>
+{% include articleCTA.html %}
